RESOLVED FIXED60745
WebProcess sandbox denies file:/// accesses after you navigate to a nonexistent file
https://bugs.webkit.org/show_bug.cgi?id=60745
Summary WebProcess sandbox denies file:/// accesses after you navigate to a nonexiste...
Sam Weinig
Reported 2011-05-12 18:54:38 PDT
WebProcess sandbox all denies file:/// accesses after you navigate to a nonexistent file.
Attachments
Patch (1.60 KB, patch)
2011-05-12 18:58 PDT, Sam Weinig
barraclough: review+
Sam Weinig
Comment 1 2011-05-12 18:56:44 PDT
To reproduce: 1) Go to a file: url that exists. 2) Go to another file: that doesn't exist 3) Try to go to a file: url that exists. You won't be able to go to the file: url in step 3.
Sam Weinig
Comment 2 2011-05-12 18:58:21 PDT
Sam Weinig
Comment 3 2011-05-12 19:11:50 PDT
Note You need to log in before you can comment on or make changes to this bug.